<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_english"
        android:title="@string/english_premier_league"
        app:showAsAction="never"/>
    <item
        android:id="@+id/menu_german"
        android:title="@string/german_bundes_liga"
        app:showAsAction="never"/>
    <item
        android:id="@+id/menu_italian"
        android:title="@string/italian_serie_a"
        app:showAsAction="never"/>
    <item
        android:id="@+id/menu_freanch"
        android:title="@string/freanch_league_1"
        app:showAsAction="never"/>
    <item
        android:id="@+id/menu_spanyol"
        android:title="@string/spanish_la_liga"
        app:showAsAction="never"/>


</menu>