<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/swipe_match"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".activities.EventDetailActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:paddingTop="20dp"
            android:paddingRight="16dp">

            <TextView
                android:id="@+id/tv_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="8dp"

                android:text="@string/strip"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <!-- Home Team -->
            <LinearLayout
                android:id="@+id/home_team"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@id/tv_date"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/home_img"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:layout_gravity="center" />

                <TextView
                    android:id="@+id/home_club"
                    style="@style/txtclub"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_home_club" />

                <TextView
                    android:id="@+id/home_formation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/strip" />

            </LinearLayout>

            <!-- Score -->
            <LinearLayout
                android:id="@+id/score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_date">

                <TextView
                    android:id="@+id/home_score"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_home_score"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="28sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_vs"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:text="@string/vs" />

                <TextView
                    android:id="@+id/away_score"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_away_score"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="28sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <!-- Away Team -->
            <LinearLayout
                android:id="@+id/away_team"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="8dp"
                app:layout_constraintLeft_toRightOf="@id/tv_date"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/away_img"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:layout_gravity="center" />

                <TextView
                    android:id="@+id/away_club"
                    style="@style/txtclub"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_away_club" />

                <TextView
                    android:id="@+id/away_formation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/strip" />

            </LinearLayout>

            <View
                android:id="@+id/line_1"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/black"
                app:layout_constraintBottom_toBottomOf="@id/away_team" />

            <!-- Goals -->
            <RelativeLayout
                android:id="@+id/goals"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="8dp"
                android:paddingTop="8dp"
                android:paddingRight="8dp"
                android:paddingBottom="32dp"
                app:layout_constraintTop_toBottomOf="@id/line_1">

                <!-- Home Goals -->
                <TextView
                    android:id="@+id/home_goals"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_toLeftOf="@id/tv_goals"
                    android:gravity="left"
                    android:text="@string/strip" />

                <TextView
                    android:id="@+id/tv_goals"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:gravity="center"
                    android:text="@string/goals"
                    android:textStyle="bold" />

                <!-- Away Goals -->
                <TextView
                    android:id="@+id/away_goals"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_toRightOf="@id/tv_goals"
                    android:gravity="right"
                    android:text="@string/strip" />

            </RelativeLayout>

            <!-- Home Shots -->
            <TextView
                android:id="@+id/home_shots"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/strip"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/goals" />

            <TextView
                android:id="@+id/tv_shots"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:paddingBottom="4dp"
                android:text="@string/shots"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/goals" />

            <!-- Away Shots -->
            <TextView
                android:id="@+id/away_shots"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/strip"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/goals" />

            <View
                android:id="@+id/line_2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"
                app:layout_constraintTop_toBottomOf="@id/tv_shots" />

            <TextView
                android:id="@+id/tv_lineups"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/lineups"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/line_2" />

            <!-- Goalkeeper-->
            <RelativeLayout
                android:id="@+id/gk"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                app:layout_constraintTop_toBottomOf="@id/tv_lineups">

                <!-- Home GK -->
                <TextView
                    android:id="@+id/home_goalkeeper"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_toLeftOf="@id/tv_gk"
                    android:gravity="start"
                    android:text="@string/strip" />

                <TextView
                    android:id="@+id/tv_gk"
                    style="@style/subtitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:gravity="center"
                    android:text="@string/goal_keeper" />

                <!-- Away GK -->
                <TextView
                    android:id="@+id/away_goalkeeper"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_toRightOf="@id/tv_gk"
                    android:gravity="end"
                    android:text="@string/strip" />

            </RelativeLayout>

            <!-- Defense -->
            <RelativeLayout
                android:id="@+id/df"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                app:layout_constraintTop_toBottomOf="@id/gk">

                <!-- Home Df -->
                <TextView
                    android:id="@+id/home_defense"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_toLeftOf="@id/tv_df"
                    android:gravity="start"
                    android:text="@string/strip" />

                <TextView
                    android:id="@+id/tv_df"
                    style="@style/subtitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:gravity="center"
                    android:text="Defense" />

                <!-- Away DF -->
                <TextView
                    android:id="@+id/away_defense"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_toRightOf="@id/tv_df"
                    android:gravity="end"
                    android:text="@string/strip" />

            </RelativeLayout>

            <!-- Midfield -->
            <RelativeLayout
                android:id="@+id/mf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                app:layout_constraintTop_toBottomOf="@id/df">

                <!-- Home Mf -->
                <TextView
                    android:id="@+id/home_midfield"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_toLeftOf="@id/tv_mf"
                    android:gravity="start"
                    android:text="@string/strip" />

                <TextView
                    android:id="@+id/tv_mf"
                    style="@style/subtitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:gravity="center"
                    android:text="@string/midfield" />

                <!-- Away MF -->
                <TextView
                    android:id="@+id/away_midfield"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_toRightOf="@id/tv_mf"
                    android:gravity="end"
                    android:text="@string/strip" />

            </RelativeLayout>

            <!-- Forward -->
            <RelativeLayout
                android:id="@+id/fw"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                app:layout_constraintTop_toBottomOf="@id/mf">

                <!-- Home FW -->
                <TextView
                    android:id="@+id/home_forward"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_toLeftOf="@id/tv_fw"
                    android:gravity="start"
                    android:text="@string/strip" />

                <TextView
                    android:id="@+id/tv_fw"
                    style="@style/subtitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:gravity="center"
                    android:text="@string/forward" />

                <!-- Away FW -->
                <TextView
                    android:id="@+id/away_forward"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_toRightOf="@id/tv_fw"
                    android:gravity="end"
                    android:text="@string/strip" />

            </RelativeLayout>

            <!-- Subtitutes -->
            <RelativeLayout
                android:id="@+id/subs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                app:layout_constraintTop_toBottomOf="@id/fw">

                <!-- Home FW -->
                <TextView
                    android:id="@+id/home_subtitutes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_toLeftOf="@id/tv_subs"
                    android:gravity="start"
                    android:text="@string/strip" />

                <TextView
                    android:id="@+id/tv_subs"
                    style="@style/subtitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:gravity="center"
                    android:text="@string/subtitutes" />

                <!-- Away FW -->
                <TextView
                    android:id="@+id/away_subtitutes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_toRightOf="@id/tv_subs"
                    android:gravity="end"
                    android:text="@string/strip" />

            </RelativeLayout>


        </android.support.constraint.ConstraintLayout>
    </ScrollView>

</android.support.v4.widget.SwipeRefreshLayout>